fix:correction insert transitions

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 
-VITE_API_URL=https://mywallet-api-tmfs.onrender.com
+# VITE_API_URL=https://mywallet-api-tmfs.onrender.com
+
+
+VITE_API_URL=http://localhost:5000
